# 9472-AppDev-Prelims-C

./: CMakeLists.txt  LinkedList.c  LinkedList.h  data.csv  main.c  main.h
cList/: list.c  list.h
citizen/: citizen.c  citizen.h  response_code.c  response_code.h
cmd/: terminal_utils.c  terminal_utils.h
file/: file.c  file.h
menu/: menu.c  menu.h
output/: data.csv
raylib_sample/: loadWindow.c  loadWindow.h
sorting/: sort.c  sort.h
utils/: util.c  util.h
